<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFond"
    tools:context=".ui.reservation.NewReservationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_viewpager"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/informations_de_r_servation"
                android:text="@string/informations_de_r_servation"
                android:textSize="18sp"
                android:padding="5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_below="@id/informations_de_r_servation"
                android:id="@+id/view_separe1"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="3dp"/>

            <RelativeLayout
                android:id="@+id/relative_1"
                android:layout_below="@+id/view_separe1"
                android:background="#FFFFFF"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/agence"
                    android:text="@string/agence"
                    android:textSize="15sp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/agence_spinner_name"
                    android:layout_below="@+id/agence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/view1"
                    android:layout_below="@+id/agence_spinner_name"
                    android:layout_width="match_parent"
                    android:background="#A3000000"
                    android:layout_height="0.4dp"/>


                <TextView
                    android:id="@+id/cat_gorie"
                    android:text="@string/cat_gorie"
                    android:layout_below="@+id/view1"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/agence_spinner_categorie"
                    android:layout_below="@+id/cat_gorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:id="@+id/view2"
                    android:layout_below="@+id/agence_spinner_categorie"
                    android:layout_width="match_parent"
                    android:background="#A3000000"
                    android:layout_height="0.4dp"/>

                <TextView
                    android:id="@+id/destination"
                    android:text="@string/destination"
                    android:layout_below="@+id/view2"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/agence_spinner_destination"
                    android:layout_below="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:id="@+id/view3"
                    android:layout_below="@+id/agence_spinner_destination"
                    android:layout_width="match_parent"
                    android:background="#A3000000"
                    android:layout_height="0.4dp"/>

                <TextView
                    android:id="@+id/date"
                    android:text="@string/date"
                    android:layout_below="@+id/view3"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="150dp"
                    android:layout_height="29.7dp"/>

                <View
                    android:id="@+id/view_date"
                    android:layout_below="@+id/date"
                    android:layout_width="150dp"
                    android:background="#A3000000"
                    android:layout_height="0.4dp"/>

                <LinearLayout
                    android:id="@+id/linear_date"
                    android:layout_below="@+id/view3"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorFond"
                    android:layout_toEndOf="@+id/date"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_voyage"
                        android:text="15h"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/heure"
                    android:text="@string/heure"
                    android:layout_below="@+id/view_date"
                    android:layout_marginTop="40dp"
                    android:layout_width="150dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_height="29.7dp"/>

                <View
                    android:layout_below="@+id/heure"
                    android:layout_width="150dp"
                    android:background="#A3000000"
                    android:layout_height="0.4dp"/>

                <LinearLayout
                    android:id="@+id/linear_heure"
                    android:layout_below="@+id/view_date"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorFond"
                    android:layout_toEndOf="@+id/heure"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/voyageur_heure"
                        android:text="15h"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/bagage"
                    android:text="@string/bagage"
                    android:layout_below="@+id/heure"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/agence_spinner_bagage"
                    android:layout_below="@+id/bagage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:id="@+id/view4"
                    android:layout_below="@+id/agence_spinner_bagage"
                    android:layout_width="match_parent"
                    android:background="#A3000000"
                    android:layout_height="0.4dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nombre_places_input"
                    android:layout_marginTop="28dp"
                    android:layout_below="@+id/view4"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre de places">

                    <EditText
                        android:id="@+id/nombre_places"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/document"
                android:text="@string/document"
                android:layout_below="@+id/relative_1"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_below="@id/document"
                android:id="@+id/view_separe2"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="3dp"/>

            <RelativeLayout
                android:id="@+id/relative_2"
                android:layout_below="@+id/view_separe2"
                android:background="#FFFFFF"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/voyageur_name_input"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/voyageur_name">

                    <EditText
                        android:id="@+id/voyageur_name"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/voyageur_name_input"
                    android:id="@+id/numero_cni_input"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/num_ro_du_documente_d_identit">

                    <EditText
                        android:id="@+id/numero_cni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/numero_cni_input"
                    android:id="@+id/validity_cni"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/validity_cni">

                    <EditText
                        android:id="@+id/validity_cni_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>


            <TextView
                android:id="@+id/photo"
                android:text="@string/photo"
                android:layout_below="@+id/relative_2"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_below="@id/photo"
                android:id="@+id/view_separe3"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="3dp"/>

            <RelativeLayout
                android:id="@+id/relative_3"
                android:layout_below="@+id/view_separe3"
                android:background="#FFFFFF"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageButton
                    android:id="@+id/btn_capture_cni"
                    android:background="@drawable/ic_menu_camera"
                    android:layout_centerInParent="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:ignore="ContentDescription" />


                <ImageView
                    android:id="@+id/view_img_cni"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription" />


            </RelativeLayout>

            <Button
                android:id="@+id/btn_new_reservation"
                android:background="@drawable/bg_viewpager"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/r_server_maintenant"
                android:layout_below="@+id/relative_3"
                android:fontFamily="@font/roboto_thin"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>