<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="#FAFAFA"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_image_profil"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nav_username"
                android:text="@string/profil"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:fontFamily="@font/roboto_thin"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/nav_email"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_thin"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
    <View
        android:background="#EEEEEE"
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    
    <LinearLayout
        android:id="@+id/nav_explore"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="Explorer"
            android:textColor="#000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_agences"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_agence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Agences"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_thin"
            android:layout_marginLeft="8dp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_courrier"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_courrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Service courriers"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="#000"
            android:fontFamily="@font/roboto_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_profil"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Profil"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="#000"
            android:fontFamily="@font/roboto_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <View
        android:background="#EEEEEE"
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:id="@+id/nav_exit"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openLogoutDialog"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Déconnexion"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="#000"
            android:fontFamily="@font/roboto_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
